Bootstrap bindings created
-Removed Jekyll Configuration file (my bad :P)
-Changed main stylesheet to be Sass and not CSS
--Altered Styles Directory such that compiled Sass is now in the root
-Added basic Bootstrap boilerplate to all pages
-Added About Me and Resume Pages
-Added General semantic structure to all pages
-Added some comments about future plans
-Added a funny image :)

TODO:
-Implement Stuff
-Update Pages
-Add credit to open source libraries ASAP

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,18 @@
-h1{
-    text-align: center;
-    font: 1.5vw "Lucidia Sans";
+header > h1 {
+  text-align: center;
 }
 
-p{
-    text-align: center;
+nav {
+  text-align: center;
 }
+
+/*This selector is temporary*/
+section.intro > img {
+  height: 10vw;
+}
+
+section.intro > span#asset-cred, intro > span#asset-cred > a {
+  font: 9px italic !important;
+}
+
+/*# sourceMappingURL=main.css.map */
