--- a/styles/main.css
+++ b/styles/main.css
@@ -31,7 +31,8 @@
   font-family: "Poppins", sans-serif;
 }
 
-#header .profile h1 a, #header .profile h1 a:hover {
+#header .profile h1 a,
+#header .profile h1 a:hover {
   color: #fff;
   text-decoration: none;
 }
@@ -59,8 +60,7 @@
 
 /*For offsetting the main webpage from the vertical navbar*/
 #main {
-  margin-left: 250px;
-  padding-left: 10px;
+  padding-left: 220px;
 }
 
 #main > * {
@@ -72,8 +72,9 @@
     left: -220px;
   }
 
-  #main, #main > * {
-    margin-left: 25px;
+  #main,
+#main > * {
+    padding-left: 0px;
   }
 }
 /*--------------------------------------------------------------
@@ -95,7 +96,8 @@
   white-space: nowrap;
 }
 
-.nav-menu a, .nav-menu a:focus {
+.nav-menu a,
+.nav-menu a:focus {
   display: flex;
   align-items: center;
   color: #a8a9b4;
@@ -105,18 +107,25 @@
   font-size: 15px;
 }
 
-.nav-menu a i, .nav-menu a:focus i {
+.nav-menu a i,
+.nav-menu a:focus i {
   font-size: 24px;
   padding-right: 8px;
   color: #6f7180;
 }
 
-.nav-menu a:hover, .nav-menu .active, .nav-menu .active:focus, .nav-menu li:hover > a {
+.nav-menu a:hover,
+.nav-menu .active,
+.nav-menu .active:focus,
+.nav-menu li:hover > a {
   text-decoration: none;
   color: #fff;
 }
 
-.nav-menu a:hover i, .nav-menu .active i, .nav-menu .active:focus i, .nav-menu li:hover > a i {
+.nav-menu a:hover i,
+.nav-menu .active i,
+.nav-menu .active:focus i,
+.nav-menu li:hover > a i {
   color: #149ddd;
 }
 
@@ -125,7 +134,8 @@ section.intro > img {
   height: 10vw;
 }
 
-section.intro > span#asset-cred, intro > span#asset-cred > a {
+section.intro > span#asset-cred,
+intro > span#asset-cred > a {
   font: 9px italic !important;
 }
 
@@ -203,6 +213,26 @@ section.intro > span#asset-cred, intro > span#asset-cred > a {
 
   .breadcrumbs ol li {
     display: inline-block;
+  }
+}
+/*Section Container Formats*/
+section.intro {
+  width: 100%;
+  height: 100vh;
+  background-image: url("../assets/main_hero.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+/*ABOUT PAGE STUFF*/
+#workspaceimg {
+  width: 100vh;
+}
+
+@media (max-width: 1024px) {
+  #workspaceimg {
+    width: 50vh;
   }
 }
 
