--- a/styles/main.css
+++ b/styles/main.css
@@ -234,8 +234,8 @@ intro > span#asset-cred > a {
 /*Section Container Formats*/
 section.intro {
   width: 100%;
-  height: 100vh;
-  background-image: url("../assets/main_hero.jpg");
+  height: 80vh;
+  background-image: url("/assets/DSC_0011_shrink.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -289,8 +289,12 @@ section.intro {
 
 .resume-skills .count-box a {
   font-weight: 600;
-  font-size: 22px;
+  font-size: 18px;
   -webkit-transition: ease-in-out 0.3s;
   transition: ease-in-out 0.3s;
+}
+
+.card .projectcard {
+  width: 30%;
 }
 /*# sourceMappingURL=main.css.map */
