--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,8 @@
+@import url("nerd-fonts-generated.min.css");
+.nf {
+  font-size: 1.2rem;
+}
+
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
@@ -52,6 +57,7 @@
   height: 36px;
   -webkit-transition: 0.3s;
   transition: 0.3s;
+  text-decoration: none;
 }
 
 #header .profile .social-links a:hover {
