Hotfix for 5f0aa1ba7ac850d048971485bf236e127b382cdd

--- a/styles/main.css
+++ b/styles/main.css
@@ -12,10 +12,8 @@
   left: 0;
   bottom: 0;
   width: 220px;
-  -webkit-transition: all ease-in-out 0.5s;
   transition: all ease-in-out 0.5s;
   z-index: 9997;
-  -webkit-transition: all 0.5s;
   transition: all 0.5s;
   padding: 0 15px;
   overflow-y: auto;
@@ -33,6 +31,7 @@
   margin: 0;
   padding: 0;
   font-weight: 600;
+  -moz-text-align-last: center;
   text-align-last: center;
   font-family: "Poppins", sans-serif;
 }
@@ -55,7 +54,6 @@
   text-align: center;
   width: 36px;
   height: 36px;
-  -webkit-transition: 0.3s;
   transition: 0.3s;
   text-decoration: none;
 }
@@ -79,12 +77,12 @@
   #header {
     left: -220px;
   }
+
   #main,
-  #main > * {
+#main > * {
     padding-left: 0px;
   }
 }
-
 /*--------------------------------------------------------------
 # Navigation Menu
 --------------------------------------------------------------*/
@@ -106,16 +104,11 @@
 
 .nav-menu a,
 .nav-menu a:focus {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   color: #a8a9b4;
   padding: 12px 15px;
   margin-bottom: 8px;
-  -webkit-transition: 0.3s;
   transition: 0.3s;
   font-size: 15px;
 }
@@ -160,22 +153,15 @@ intro > span#asset-cred > a {
   z-index: 9998;
   border: 0;
   font-size: 24px;
-  -webkit-transition: all 0.4s;
   transition: all 0.4s;
   outline: none !important;
   background-color: #149ddd;
   color: #fff;
   width: 40px;
   height: 40px;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
   display: inline-flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   line-height: 0;
   border-radius: 50px;
   cursor: pointer;
@@ -203,11 +189,8 @@ intro > span#asset-cred > a {
 }
 
 .breadcrumbs ol {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   list-style: none;
   padding: 0;
   margin: 0;
@@ -229,14 +212,15 @@ intro > span#asset-cred > a {
   .breadcrumbs .d-flex {
     display: block !important;
   }
+
   .breadcrumbs ol {
     display: block;
   }
+
   .breadcrumbs ol li {
     display: inline-block;
   }
 }
-
 /*Section Container Formats*/
 section.intro {
   width: 100%;
@@ -257,7 +241,6 @@ section.intro {
     width: 50vh;
   }
 }
-
 /*Resume Page Stuff*/
 .resume {
   padding: 10px 0px;
@@ -296,11 +279,11 @@ section.intro {
 .resume-skills .count-box a {
   font-weight: 600;
   font-size: 18px;
-  -webkit-transition: ease-in-out 0.3s;
   transition: ease-in-out 0.3s;
 }
 
 .card .projectcard {
   width: 30%;
 }
+
 /*# sourceMappingURL=main.css.map */
