--- a/src/styles.scss
+++ b/src/styles.scss
@@ -48,7 +48,7 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
-@import url("nerd-fonts-generated.min.css");
+@import url("./assets/nerd-fonts-generated.min.css");
 
 .nf {
   font-size: 1.2rem;
@@ -70,50 +70,7 @@ body {
   overflow-y: auto;
 }
 
-#header .profile img {
-  margin: 15px auto;
-  display: block;
-  width: 120px;
-  border: 8px solid #2c2f3f;
-}
 
-#header .profile h1 {
-  font-size: 24px;
-  margin: 0;
-  padding: 0;
-  font-weight: 600;
-  -moz-text-align-last: center;
-  text-align-last: center;
-  font-family: "Poppins", sans-serif;
-}
-
-#header .profile h1 a,
-#header .profile h1 a:hover {
-  color: #fff;
-  text-decoration: none;
-}
-
-#header .profile .social-links a {
-  font-size: 18px;
-  display: inline-block;
-  background: #212431;
-  color: #fff;
-  line-height: 1;
-  padding: 8px 0;
-  margin-right: 4px;
-  border-radius: 50%;
-  text-align: center;
-  width: 36px;
-  height: 36px;
-  transition: 0.3s;
-  text-decoration: none;
-}
-
-#header .profile .social-links a:hover {
-  background: #149ddd;
-  color: #fff;
-  text-decoration: none;
-}
 
 /*For offsetting the main webpage from the vertical navbar*/
 #main {
