--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,6 +14,10 @@
   z-index: 2;
 }
 
+.headerSpacer {
+  flex: 1 1 auto;
+}
+
 h1.headerName {
   margin-left: 8px;
 }
@@ -37,15 +41,12 @@ h1.headerName {
   width: 220px;
 }
 
-mat-sidenav{
-  width: 220px;
+.routerContent {
+  margin-top: 60px;
 }
 
-.profile img {
-  margin: 15px auto;
-  display: block;
-  width: 120px;
-  border: 8px solid #2c2f3f;
+mat-sidenav {
+  width: 220px;
 }
 
 .profile h1 {
@@ -64,18 +65,22 @@ mat-sidenav{
   text-decoration: none;
 }
 
+.profile .social-links {
+  text-align: center;
+}
+
 .profile .social-links a {
   font-size: 18px;
   display: inline-block;
   background: #212431;
   color: #fff;
-  line-height: 1;
-  padding: 8px 0;
+  line-height: 1.3;
+  padding: 4px;
   margin-right: 4px;
-  border-radius: 50%;
+  border-radius: 100%;
   text-align: center;
-  width: 36px;
-  height: 36px;
+  width: 24px;
+  height: 24px;
   transition: 0.3s;
   text-decoration: none;
 }
@@ -86,3 +91,10 @@ mat-sidenav{
   text-decoration: none;
 }
 
+.profile img.pfp {
+  border-radius: 50%;
+  margin: 15px auto;
+  display: block;
+  width: 120px;
+  border: 8px solid #2c2f3f;
+}
