Footer Migration to Component
-Created Footer Stub Component
-Replaced Each Routed Component's Footer to use the new Component
-Migrated Styles from global stylesheet to component-specific ones
-Updated Footer Content to reflect code changes

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,11 +1,3 @@
 <footer>
-	<div class="bg-dark flex-grow-1" style="margin-top: 20px;">
-		<div class="text-muted text-center">Alex "FaceFTW" Westerman <i class="nf nf-fa-copyright"></i>2021 All
-			Rights
-			Reserved.</div>
-		<div class="text-muted text-center">Source code for this website is licensed under the MIT License</div>
-		<div class="text-muted text-center">This website was created by hand with Bootstrap 5.0.1, using the
-			Bootswatch Darkly Variant</div>
-		<div class="text-muted text-center"></div>
-	</div>
+	<app-footer></app-footer>
 </footer>
