--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,44 +1,44 @@
 <main class="container">
-    <section class="projintro my-2">
-        <h1 class="d-inline-flex p-2"></h1>
-        <ol class="breadcrumb d-inline-flex float-end">
-            <li class="breadcrumb-item"><a href="/index.html">Home</a></li>
-            <li class="breadcrumb-item active"><a href="/page/resume.html">Resume</a></li>
-        </ol>
-    </section>
-    <section>
-        <div class="fs-1">Hi! My name is Alex</div>
-        <div class="row">
-            <div class="col-12 col-lg-6">
-                <p>Since I was 12 years old, I've been cultivating my interests in computers and technology. I
-                    taught myself how to program, use breadboards, prototype basic electronic solutions, and
-                    disassembling/salvaging old computers. Whether it was speed disassembling and reassembling
-                    TI-84s out of pure boredom in middle school, figuring out how to remount a LUKS encrypted drive
-                    for decryption over many high school lunches for a friend, or even helping my grandparents
-                    understand social engineering attacks that they are often vulnerable to, I always try to expand
-                    my understanding in the broadest reach possible. This has allowed me to perceive problems and
-                    projects from a multi-faceted perspective, and make guided decisions to accelerate workflow.</p>
-                <br>
-                <p>I created this portfolio to demonstrate my knowledge and showcase some of the projects,
-                    regardless if academic, professional, or personal, that I am proud of. I intend for this to also
-                    be a way to show what I am actively working on, updating it as new projects start or finish,
-                    keeping my self from the old programmer habit of starting thousands of projects never to see the
-                    light of day. I love open-source software because reverse engineering source files and doing
-                    small tweaks was one of the ways I learned to program, so most of my projects are open source
-                    under a permissive license (unless otherwise stated).</p>
-                <br>
+	<section class="projintro my-2">
+		<h1 class="d-inline-flex p-2"></h1>
+		<ol class="breadcrumb d-inline-flex float-end">
+			<li class="breadcrumb-item"><a href="/index.html">Home</a></li>
+			<li class="breadcrumb-item active"><a href="/page/resume.html">Resume</a></li>
+		</ol>
+	</section>
+	<section>
+		<div class="fs-1">Hi! My name is Alex</div>
+		<div class="row">
+			<div class="col-12 col-lg-6">
+				<p>Since I was 12 years old, I've been cultivating my interests in computers and technology. I
+					taught myself how to program, use breadboards, prototype basic electronic solutions, and
+					disassembling/salvaging old computers. Whether it was speed disassembling and reassembling
+					TI-84s out of pure boredom in middle school, figuring out how to remount a LUKS encrypted drive
+					for decryption over many high school lunches for a friend, or even helping my grandparents
+					understand social engineering attacks that they are often vulnerable to, I always try to expand
+					my understanding in the broadest reach possible. This has allowed me to perceive problems and
+					projects from a multi-faceted perspective, and make guided decisions to accelerate workflow.</p>
+				<br>
+				<p>I created this portfolio to demonstrate my knowledge and showcase some of the projects,
+					regardless if academic, professional, or personal, that I am proud of. I intend for this to also
+					be a way to show what I am actively working on, updating it as new projects start or finish,
+					keeping my self from the old programmer habit of starting thousands of projects never to see the
+					light of day. I love open-source software because reverse engineering source files and doing
+					small tweaks was one of the ways I learned to program, so most of my projects are open source
+					under a permissive license (unless otherwise stated).</p>
+				<br>
 
-            </div>
-            <div class="col-12 col-lg-6">
-                <img src="/assets/L1100085.JPG" style="width:100%">
-            </div>
-            <div class="row">
-                <div class="fs-4">I love to explore new areas where technology can be integrated, and this is a
-                    passion I expect to be pursuing for the rest of my life. Thanks for visiting and seeing what I
-                    have learned over the variety of experiences I have gone through!</div>
-            </div>
-        </div>
-    </section>
+			</div>
+			<div class="col-12 col-lg-6">
+				<img src="/assets/L1100085.JPG" style="width:100%">
+			</div>
+			<div class="row">
+				<div class="fs-4">I love to explore new areas where technology can be integrated, and this is a
+					passion I expect to be pursuing for the rest of my life. Thanks for visiting and seeing what I
+					have learned over the variety of experiences I have gone through!</div>
+			</div>
+		</div>
+	</section>
 </main>
 
 
@@ -46,13 +46,5 @@
 
 
 <footer>
-    <div class="bg-dark flex-grow-1" style="margin-top: 20px;">
-        <div class="text-muted text-center">Alex "FaceFTW" Westerman <i class="nf nf-fa-copyright"></i>2021 All
-            Rights
-            Reserved.</div>
-        <div class="text-muted text-center">Source code for this website is licensed under the MIT License</div>
-        <div class="text-muted text-center">This website was created by hand with Bootstrap 5.0.1, using the
-            Bootswatch Darkly Variant</div>
-        <div class="text-muted text-center"></div>
-    </div>
+	<app-footer></app-footer>
 </footer>
