--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,27 +1,19 @@
 <main id="main">
-    <section class="intro">
-        <div class="justify-content-center" style="padding-top:150px; padding-left:100px" id="hero-container">
-            <span class="h1 bg-body" style="padding: 5px 10px" id="hero-text">Software Engineer</span>
-            <div style="padding:50px;"> </div>
-            <span class="h1 bg-body" style="padding: 5px 10px" id="hero-text">Hardware Tinkerer</span>
-            <div style="padding:50px;"> </div>
-            <span class="h1 bg-body" style="padding: 5px 10px" id="hero-text">Power User</span>
-            <div style="padding:50px;"> </div>
-            <span class="h1 bg-body" style="padding: 5px 10px" id="hero-text">Tech Enthusiast</span>
-        </div>
-    </section>
-    <section class="projects" id="projects-section">
+	<section class="intro">
+		<div class="justify-content-center" style="padding-top:150px; padding-left:100px" id="hero-container">
+			<span class="h1 bg-body" style="padding: 5px 10px" id="hero-text">Software Engineer</span>
+			<div style="padding:50px;"> </div>
+			<span class="h1 bg-body" style="padding: 5px 10px" id="hero-text">Hardware Tinkerer</span>
+			<div style="padding:50px;"> </div>
+			<span class="h1 bg-body" style="padding: 5px 10px" id="hero-text">Power User</span>
+			<div style="padding:50px;"> </div>
+			<span class="h1 bg-body" style="padding: 5px 10px" id="hero-text">Tech Enthusiast</span>
+		</div>
+	</section>
+	<section class="projects" id="projects-section">
 
-    </section>
+	</section>
 </main>
 <footer>
-    <div class="bg-dark " style="margin-top: 20px;">
-        <div class="text-muted text-center">Alex "FaceFTW" Westerman <i class="nf nf-fa-copyright"></i>2021 All
-            Rights
-            Reserved.</div>
-        <div class="text-muted text-center">Source code for this website is licensed under the MIT License</div>
-        <div class="text-muted text-center">This website was created by hand with Bootstrap 5.0.1, using the
-            Bootswatch Darkly Variant</div>
-        <div class="text-muted text-center"></div>
-    </div>
+	<app-footer></app-footer>
 </footer>
