Started Implementing the Reason for Migration
    -Changed Angular Configuration for Assets
    -Restructured Assets to more reasonable folders
    -Added baseline features for "featured project" cards on Home
    -Some styling work
    -Added a couple of Material Modules
    -Fixed capitalization of miscellaneous link strings
    -Changed how project assets are tracked in the JSON (file name only)
    -Added code to Home to resolve asset paths

    Known bugs
    -I moved some images in MS word and now the css overlaps the footer
    (╯°□°）╯︵ ┻━┻
    -funny bird icon's button outline shrank
    -Primary accent theme's text color is black, considering changing it

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,7 +11,42 @@
 		</div>
 	</section>
 	<section class="projects" id="projects-section">
+		<!--This is why I wanted to rewrite the website with Angular-->
+		<mat-grid-list [cols]="breakpoint" class="featured" (window:resize)="onResize($event)">
+			<mat-grid-tile *ngFor="let project of featured" class="card">
+				<mat-card class="card">
+					<mat-card-header>
+						<mat-card-title>{{project.projectName}}</mat-card-title>
+						<mat-card-subtitle>{{project.projectDescription}}</mat-card-subtitle>
+					</mat-card-header>
+					<img mat-card-image src="{{correctAssetPath(project)}}">
 
+					<mat-card-content>
+						<span class="cardSubDesc">{{project.projectSubDesc}}</span><br>
+						<span class="cardSubDesc">Languages: {{project.projectLanguage.join(", ")}}</span><br>
+						<span class="cardSubDesc" *ngIf="project.projectLibraries">Libraries:
+							{{project.projectLibraries.join(", ")}}</span>
+					</mat-card-content>
+					<mat-card-actions class="cardLinks">
+						<ng-container *ngFor="let link of project.projectLinks">
+							<span class="" *ngIf="link.linkType === 'text'">{{link.text}}</span>
+							<a mat-raised-button color="primary" href="{{link.linkURL}}"
+								*ngIf="link.linkType === 'github'">
+								<mat-icon fontIcon="nf-dev-github"></mat-icon> GITHUB REPO
+							</a>
+							<a mat-raised-button color="primary" href="{{link.linkURL}}"
+								*ngIf="link.linkType === 'demo'">
+								<mat-icon fontIcon="nf-dev-github"></mat-icon> LIVE DEMO
+							</a>
+							<a mat-raised-button color="primary" href="{{link.linkURL}}"
+								*ngIf="link.linkType === 'misc'">
+								<mat-icon fontIcon="nf-dev-github"></mat-icon> {{link.linkDesc}}
+							</a>
+						</ng-container>
+					</mat-card-actions>
+				</mat-card>
+			</mat-grid-tile>
+		</mat-grid-list>
 	</section>
 </main>
 <footer>
