--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
             [fixedInViewport]="mobileQuery.matches ? false : true" opened class="snav">
             <div class="profile">
                 <a routerLink="/main" routerLinkActive="active">
-                    <img src="assets/pfp_not_funny.jpg" alt="" class="pfp">
+                    <img src="/assets/img/pfp_not_funny.jpg" alt="" class="pfp">
                 </a>
                 <h1 class="navbar-brand">
                     <a routerLink="/main" routerLinkActive="active">Alex Westerman</a>
