--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,16 +1,25 @@
 section.intro {
-  width: 100%;
-  height: 80vh;
-  background-image: url("/assets/DSC_0011_shrink.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  //margin: 0px !important;
+	width: 100%;
+	height: 80vh;
+	background-image: url("../../assets/img/DSC_0011.jpg");
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+	//margin: 0px !important;
 }
 
+.featured {
+	display: block;
+}
 
+footer {
+	display: block;
+}
+// .featured {
+// 	// display: flex;
+// 	// width: 100%;
+// }
 
-section.intro > span#asset-cred,
-intro > span#asset-cred > a {
-  font: 9px italic !important;
+mat-grid-list{
+	flex: 0 1 auto;
 }
