--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,41 +12,51 @@
 	</section>
 	<section class="projects" id="projects-section">
 		<!--This is why I wanted to rewrite the website with Angular-->
-		<mat-grid-list [cols]="breakpoint" class="featured" (window:resize)="onResize($event)">
-			<mat-grid-tile *ngFor="let project of featured" class="card">
-				<mat-card class="card">
-					<mat-card-header>
-						<mat-card-title>{{project.projectName}}</mat-card-title>
-						<mat-card-subtitle>{{project.projectDescription}}</mat-card-subtitle>
-					</mat-card-header>
-					<img mat-card-image src="{{correctAssetPath(project)}}">
-
-					<mat-card-content>
-						<span class="cardSubDesc">{{project.projectSubDesc}}</span><br>
-						<span class="cardSubDesc">Languages: {{project.projectLanguage.join(", ")}}</span><br>
-						<span class="cardSubDesc" *ngIf="project.projectLibraries">Libraries:
-							{{project.projectLibraries.join(", ")}}</span>
-					</mat-card-content>
-					<mat-card-actions class="cardLinks">
-						<ng-container *ngFor="let link of project.projectLinks">
-							<span class="" *ngIf="link.linkType === 'text'">{{link.text}}</span>
-							<a mat-raised-button color="primary" href="{{link.linkURL}}"
-								*ngIf="link.linkType === 'github'">
-								<mat-icon fontIcon="nf-dev-github"></mat-icon> GITHUB REPO
-							</a>
-							<a mat-raised-button color="primary" href="{{link.linkURL}}"
-								*ngIf="link.linkType === 'demo'">
-								<mat-icon fontIcon="nf-dev-github"></mat-icon> LIVE DEMO
-							</a>
-							<a mat-raised-button color="primary" href="{{link.linkURL}}"
-								*ngIf="link.linkType === 'misc'">
-								<mat-icon fontIcon="nf-dev-github"></mat-icon> {{link.linkDesc}}
-							</a>
-						</ng-container>
-					</mat-card-actions>
-				</mat-card>
-			</mat-grid-tile>
-		</mat-grid-list>
+		<div class="card-container">
+			<div class="spacer"></div>
+			<mat-grid-list [cols]="3" class="featured" rowHeight="650px">
+				<mat-grid-tile *ngFor="let project of featured" class="card">
+					<mat-card>
+						<mat-card-header>
+							<mat-card-title>{{project.projectName}}</mat-card-title>
+							<mat-card-subtitle>{{project.projectDescription}}</mat-card-subtitle>
+						</mat-card-header>
+						<img mat-card-image src="{{correctAssetPath(project)}}">
+						<mat-card-content>
+							<span class="devStatus">Project Status:
+								<span class="devStatus" [ngClass]="{active: project.projectStatus.status === 'Active Development',
+												finished: project.projectStatus.status ==='Finished' || project.projectStatus.status ==='Finished (Private Work)',
+												suspended: project.projectStatus.status ==='Suspended',
+												archived: project.projectStatus.status ==='archived'}">{{project.projectStatus.status}}</span>
+								<span *ngIf="project.projectStatus.reason">&nbsp;{{project.projectStatus.reason}</span>
+							</span><br>
+							<span class="cardSubDesc">{{project.projectSubDesc}}</span><br>
+							<span class="cardSubDesc">Languages: {{project.projectLanguage.join(", ")}}</span><br>
+							<span class="cardSubDesc" *ngIf="project.projectLibraries">Libraries:
+								{{project.projectLibraries.join(", ")}}</span>
+						</mat-card-content>
+						<mat-card-actions class="cardLinks">
+							<ng-container *ngFor="let link of project.projectLinks">
+								<span class="" *ngIf="link.linkType === 'text'">{{link.text}}</span>
+								<a mat-raised-button color="primary" href="{{link.linkURL}}"
+									*ngIf="link.linkType === 'github'">
+									<mat-icon fontIcon="nf-dev-github"></mat-icon> GITHUB REPO
+								</a>
+								<a mat-raised-button color="primary" href="{{link.linkURL}}"
+									*ngIf="link.linkType === 'demo'">
+									<mat-icon fontIcon="nf-dev-github"></mat-icon> LIVE DEMO
+								</a>
+								<a mat-raised-button color="primary" href="{{link.linkURL}}"
+									*ngIf="link.linkType === 'misc'">
+									<mat-icon fontIcon="nf-dev-github"></mat-icon> {{link.linkDesc}}
+								</a>
+							</ng-container>
+						</mat-card-actions>
+					</mat-card>
+				</mat-grid-tile>
+			</mat-grid-list>
+			<div class="spacer"></div>
+		</div>
 	</section>
 </main>
 <footer>
