Add Basic Project Table Functionality
-Added Material Table Module to Imports
-Added Table to table view of projects
-Some other grid tweaks

Known Issues
-If libraries does not exist for a project, all subsequent table entries do not show

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -27,8 +27,8 @@
 								<span class="devStatus" [ngClass]="{active: project.projectStatus.status === 'Active Development',
 												finished: project.projectStatus.status ==='Finished' || project.projectStatus.status ==='Finished (Private Work)',
 												suspended: project.projectStatus.status ==='Suspended',
-												archived: project.projectStatus.status ==='archived'}">{{project.projectStatus.status}}</span>
-								<span *ngIf="project.projectStatus.reason">&nbsp;{{project.projectStatus.reason}</span>
+												archived: project.projectStatus.status ==='Archived'}">{{project.projectStatus.status}}</span>
+								<span *ngIf="project.projectStatus.reason"><br>{{project.projectStatus.reason}}</span>
 							</span><br>
 							<span class="cardSubDesc">{{project.projectSubDesc}}</span><br>
 							<span class="cardSubDesc">Languages: {{project.projectLanguage.join(", ")}}</span><br>
