--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,3 +1,82 @@
+<mat-tab-group>
+	<mat-tab label="GRID VIEW">
+		<ng-template matTabContent>
+			<mat-grid-list [cols]="3" class="featured" rowHeight="650px" gutterSize="10px">
+				<mat-grid-tile *ngFor="let project of projects" class="card">
+					<mat-card>
+						<mat-card-header>
+							<mat-card-title>{{project.projectName}}</mat-card-title>
+							<mat-card-subtitle>{{project.projectDescription}}</mat-card-subtitle>
+						</mat-card-header>
+						<img mat-card-image src="{{correctAssetPath(project)}}">
+						<mat-card-content>
+							<span class="devStatus">Project Status:
+								<span class="devStatus" [ngClass]="{active: project.projectStatus.status === 'Active Development',
+												finished: project.projectStatus.status ==='Finished' || project.projectStatus.status ==='Finished (Private Work)',
+												suspended: project.projectStatus.status ==='Suspended',
+												archived: project.projectStatus.status ==='Archived'}">{{project.projectStatus.status}}</span>
+								<span *ngIf="project.projectStatus.reason"><br>{{project.projectStatus.reason}}</span>
+							</span><br>
+							<span class="cardSubDesc">{{project.projectSubDesc}}</span><br>
+							<span class="cardSubDesc">Languages: {{project.projectLanguage.join(", ")}}</span><br>
+							<span class="cardSubDesc" *ngIf="project.projectLibraries">Libraries:
+								{{project.projectLibraries.join(", ")}}</span>
+						</mat-card-content>
+						<mat-card-actions class="cardLinks">
+							<ng-container *ngFor="let link of project.projectLinks">
+								<span class="" *ngIf="link.linkType === 'text'">{{link.text}}</span>
+								<a mat-raised-button color="primary" href="{{link.linkURL}}"
+									*ngIf="link.linkType === 'github'">
+									<mat-icon fontIcon="nf-dev-github"></mat-icon> GITHUB REPO
+								</a>
+								<a mat-raised-button color="primary" href="{{link.linkURL}}"
+									*ngIf="link.linkType === 'demo'">
+									<mat-icon fontIcon="nf-dev-github"></mat-icon> LIVE DEMO
+								</a>
+								<a mat-raised-button color="primary" href="{{link.linkURL}}"
+									*ngIf="link.linkType === 'misc'">
+									<mat-icon fontIcon="nf-dev-github"></mat-icon> {{link.linkDesc}}
+								</a>
+							</ng-container>
+						</mat-card-actions>
+					</mat-card>
+				</mat-grid-tile>
+			</mat-grid-list>
+		</ng-template>
+	</mat-tab>
+	<mat-tab label="TABLE VIEW">
+		<ng-template matTabContent>
+			<table mat-table class="projectTable" [dataSource]="projects">
+				<tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+				<tr mat-row *matRowDef="let myRowData; columns: columnsToDisplay"></tr>
+				<ng-container matColumnDef="projectName">
+					<th mat-header-cell *matHeaderCellDef> PROJECT </th>
+					<td mat-cell *matCellDef="let project"> {{project.projectName}} </td>
+				</ng-container>
+				<ng-container matColumnDef="projectStatus">
+					<th mat-header-cell *matHeaderCellDef> STATUS </th>
+					<td mat-cell *matCellDef="let project"> {{project.projectStatus.status}} </td>
+				</ng-container>
+				<ng-container matColumnDef="projectLanguage">
+					<th mat-header-cell *matHeaderCellDef> LANGUAGES </th>
+					<td mat-cell *matCellDef="let project"> {{project.projectLanguage.join(", ")}} </td>
+				</ng-container>
+				<ng-container matColumnDef="projectLibraries">
+					<th mat-header-cell *matHeaderCellDef> LIBRARIES </th>
+					<td mat-cell *matCellDef="let project"> {{project.projectLibraries.join(", ")}} </td>
+				</ng-container>
+				<!-- <ng-container matColumnDef="projectLinks">
+					<th mat-header-cell *matHeaderCellDef> GITHUB REPO </th>
+					<td mat-cell *matCellDef="let user">  </td>
+				</ng-container>
+				<ng-container matColumnDef="score">
+					<th mat-header-cell *matHeaderCellDef> Score </th>
+					<td mat-cell *matCellDef="let user"> {{user.score}} </td>
+				</ng-container> -->
+			</table>
+		</ng-template>
+	</mat-tab>
+</mat-tab-group>
 <footer>
 	<app-footer></app-footer>
 </footer>
