Initial Migration of Resume
-Removed most of the old bootstrap code
-Added Material Expansion Panel Module
-Moved content originally in accordions to respective expansion panels
-Attempted fix for project table items

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -63,7 +63,7 @@
 				</ng-container>
 				<ng-container matColumnDef="projectLibraries">
 					<th mat-header-cell *matHeaderCellDef> LIBRARIES </th>
-					<td mat-cell *matCellDef="let project"> {{project.projectLibraries.join(", ")}} </td>
+					<td mat-cell *matCellDef="let project"> {{correctLibrariesList(project)}} </td>
 				</ng-container>
 				<!-- <ng-container matColumnDef="projectLinks">
 					<th mat-header-cell *matHeaderCellDef> GITHUB REPO </th>
