--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,213 +1,178 @@
-<main class="container">
-	<section class="projintro my-2">
+<section class="outline">
+	<h2>Skills</h2>
+	<mat-grid-list cols="3" rowHeight="100px">
 
-		<ol class="breadcrumb d-inline-flex float-end">
-			<li class="breadcrumb-item"><a href="/index.html">Home</a></li>
-			<li class="breadcrumb-item active"><a href="/page/resume.html">Resume</a></li>
-		</ol>
-	</section>
-	<section class="inner-page">
-		<div class="d-inline-flex p-2 fs-1">Resume</div>
-		<section class="resume-skills" id="resume-skills">
-			<div class="container">
-				<div class="fs-2">Skills</div>
-				<div class="row no-gutters">
-					<div class="col-lg-4 col-md-6 d-md-flex align-items-md-stretch">
-						<div class="count-box">
-							<i class='bx bxs-book-bookmark bx-tada-hover'></i>
-							<span>8+ years</span>
-							<p><strong>Experience</strong> in Computers, Programming, and Technology</p>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-6 d-md-flex align-items-md-stretch">
-						<div class="count-box">
-							<i class="nf nf-fa-github rounded-circles bx-tada-hover"></i>
-							<span>10+ Repos</span>
-							<p><strong>Available on <a href="https://github.com/rhit-westeraj">Github</a></strong>
-							</p>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-6 d-md-flex align-items-md-stretch">
-						<div class="count-box">
-							<i class="nf nf-fa-heart"></i>
-							<span>Passionate</span>
-							<p>Love and Desire to Learn and Experience New Things! </p>
-						</div>
-					</div>
-					<!-- <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch">
+		<mat-grid-tile>
+			<div class="count-box">
+				<mat-icon fontIcon="nf-fa-book"></mat-icon>
+				<span>8+ years</span>
+				<p><strong>Experience</strong> in Computers, Programming, and Technology</p>
+			</div>
+		</mat-grid-tile>
+
+		<mat-grid-tile>
+			<div class="count-box">
+				<i class="nf nf-fa-github rounded-circles bx-tada-hover"></i>
+				<span>10+ Repos</span>
+				<p><strong>Available on <a href="https://github.com/rhit-westeraj">Github</a></strong>
+				</p>
+			</div>
+		</mat-grid-tile>
+
+		<mat-grid-tile>
+			<div class="count-box">
+				<i class="nf nf-fa-heart"></i>
+				<span>Passionate</span>
+				<p>Love and Desire to Learn and Experience New Things! </p>
+			</div>
+		</mat-grid-tile>
+		<!-- <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch">
                         <div class="count-box">
                             <i class="bx bxs-calendar-star"></i>
                             <span>8+ years</span>
                             <p><strong>Experience</strong> in Computers, Programming, etc</p>
                         </div>
                     </div> -->
+	</mat-grid-list>
+</section>
 
-				</div>
-			</div>
-			<div class="container">
-				<div class="accordion" id="skillsAccordion">
-					<div class="accordion-item bg-dark">
-						<h2 class="accordion-header bg-dark" id="progSkills">
-							<button class="accordion-button" type="button" data-bs-toggle="collapse"
-								data-bs-target="#progCollapse" aria-expanded="true" aria-controls="collapseOne">
-								Computer Programming </button>
-						</h2>
-						<div id="progCollapse" class="accordion-collapse collapse show" aria-labelledby="progSkills">
-							<div class="accordion-body bg-dark">
-								<ul>
-									<li>Advanced experience in industry-level languages, including C, C++, and Java
-									</li>
-									<li>Intermediate experience in SQL Databases and Queries, and the PostgreSQL
-										Engine</li>
-									<li>Intermediate understanding of Windows and Linux/UNIX kernels and
-										environments</li>
-									<li>Advanced skills in web design (HTML5, CSS3, JavaScript) and other web
-										platforms (WordPress, Angular, NodeJS)</li>
-									<li>Intermediate/Advanced understanding of low-level programming and processor
-										architecture</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div class="accordion-item">
-						<h2 class="accordion-header" id="hardwareSkills">
-							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-								data-bs-target="#hardwareCollapse" aria-expanded="false" aria-controls="hardwareSkills">
-								Computer Hardware/Repair
-							</button>
-						</h2>
-						<div id="hardwareCollapse" class="accordion-collapse collapse" aria-labelledby="hardwareSkills">
-							<div class="accordion-body">
-								<li>Advanced understanding of computer internals and hardware</li>
-								<li>Able to recover data, refurbish old hardware, and construct functional devices
-									with other hardware</li>
-								<li>Intermediate/Advanced expertise in IoT devices, Arduino, and Raspberry Pi</li>
-								<li>Basic understanding of electronic component form factors, functions, behavior,
-									and use cases</li>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
+<h3>Skills</h3>
+<mat-accordion>
+	<!--Panel 1-->
+	<mat-expansion-panel>
+		<mat-expansion-panel-header>
+			<mat-panel-title>Computer Programming</mat-panel-title>
+			<mat-panel-description></mat-panel-description>
+		</mat-expansion-panel-header>
+		<!--Panel Content-->
+		<ul>
+			<li>Advanced experience in industry-level languages, including C, C++, and Java
+			</li>
+			<li>Intermediate experience in SQL Databases and Queries, and the PostgreSQL
+				Engine</li>
+			<li>Intermediate understanding of Windows and Linux/UNIX kernels and
+				environments</li>
+			<li>Advanced skills in web design (HTML5, CSS3, JavaScript) and other web
+				platforms (WordPress, Angular, NodeJS)</li>
+			<li>Intermediate/Advanced understanding of low-level programming and processor
+				architecture</li>
+		</ul>
+	</mat-expansion-panel>
 
-		<section class="resume resume-edu">
-			<div class="container">
-				<div class="fs-2">Education</div>
-				<div class="accordion" id="eduAccordion">
-					<div class="accordion-item">
-						<h2 class="accordion-header" id="headingOne">
-							<button class="accordion-button card-header" type="button" data-bs-toggle="collapse"
-								data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-								Rose-Hulman Institute of Technology (Class of 2023)
-							</button>
-						</h2>
-						<div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne">
-							<div class="accordion-body bg-dark">
-								<ul>
-									<li><strong class="h5">Field of Study: </strong>Software Engineering (Bachelor
-										of
-										Science)
-										<ul>
-											<li>Originally Studied Computer Engineering until Spring 2021</li>
-										</ul>
-									</li>
-								</ul>
-								<br>
-								<div class="h5 text-decoration-underline">Relevant Coursework: </div>
-								<ul>
-									<li>Computer Architecture I (CSSE232)</li>
-									<li>Intro to Embedded Systems (ECE230)</li>
-									<li>Data Structures and Algorithms (CSSE230)</li>
-									<li>Intro to Web Programming (CSSE280)</li>
-									<li>Intro to Object-Oriented Programming</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div class="accordion-item">
-						<h2 class="accordion-header" id="headingTwo">
-							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-								data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-								Walt-Whitman High School (Class of 2019)
-							</button>
-						</h2>
-						<div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo">
-							<div class="accordion-body">
-								<p>Unweighted GPA: 3.3, Weighted GPA: 4.0</p>
-								<div class="h5 text-decoration-underline">Relevant Coursework: </div>
-								<div class="h5 text-decoration-underline">Relevant Coursework: </div>
-								<ul>
-									<li>AP Computer Science - Score: 4</li>
-									<li>AP Calculus AB - Score: 5</li>
-									<li>PLTW Digital Electronics</li>
-									<li>PLTW Engineering Design and Development Capstone Course</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<section class="resume resume-exp">
-			<div class="container">
-				<div class="fs-2">Experience</div>
-				<div class="accordion" id="expAccordion">
-					<div class="accordion-item">
-						<h2 class="accordion-header" id="exp1">
-							<button class="accordion-button card-header" type="button" data-bs-toggle="collapse"
-								data-bs-target="#exp1Collapse" aria-expanded="true" aria-controls="collapseOne">
-								Rizkly Inc.
-							</button>
-						</h2>
-						<div id="exp1Collapse" class="accordion-collapse collapse show" aria-labelledby="headingOne">
-							<div class="accordion-body bg-dark">
-								<div>Company Location: Bethesda, MD</div>
-								<div>Position: Software Development Intern</div>
-								<div>Employment Length: June 2020 - Current</div>
-								<br>
-								<ul>
-									<li>Helped plan and suggest new algorithms to deploy for client use</li>
-									<li>Wrote and optimized new algorithm code for database backends to implement
-										new features</li>
-									<li>Communicated with database/server administrators about integration of new
-										feature-sets</li>
-									<li>Documented work for company transparency to clients</li>
-									<li>Implemented a CRUD-like web service that communicates with a PostgreSQL
-										database</li>
-									<li>Created Algorithm Visualizations powered by Angular</li>
-								</ul>
+	<!--Panel 2-->
+	<mat-expansion-panel>
+		<mat-expansion-panel-header>
+			<mat-panel-title>Computer Hardware/Repair</mat-panel-title>
+		</mat-expansion-panel-header>
+		<!--Panel Content-->
+		<ul>
+			<li>Advanced understanding of computer internals and hardware</li>
+			<li>Able to recover data, refurbish old hardware, and construct functional devices
+				with other hardware</li>
+			<li>Intermediate/Advanced expertise in IoT devices, Arduino, and Raspberry Pi</li>
+			<li>Basic understanding of electronic component form factors, functions, behavior,
+				and use cases</li>
+		</ul>
+	</mat-expansion-panel>
+</mat-accordion>
 
-							</div>
-						</div>
-					</div>
-					<div class="accordion-item">
-						<h2 class="accordion-header" id="exp2">
-							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-								data-bs-target="#exp2Collapse" aria-expanded="false" aria-controls="collapseTwo">
-								Holton Arms Creative Summer </button>
-						</h2>
-						<div id="exp2Collapse" class="accordion-collapse collapse" aria-labelledby="headingTwo">
-							<div class="accordion-body">
-								<ul>
-									<div>Company Location: Bethesda, MD</div>
-									<div>Position: Web Design Counselor</div>
-									<div>Employment Length: June 2019 - August 2019</div>
-									<br>
-									<li>Taught children ages 8-15 various principles of basic web design including
-										HTML5 and CSS3</li>
-									<li>Supervised and engaged children throughout camp day</li>
-									<li>Communicated with parents about child's experiences at camp</li>
-									<li>Aided with camp-related activities and duties</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-	</section>
-</main>
+<h3>Education</h3>
+<mat-accordion>
+	<!--Panel 1-->
+	<mat-expansion-panel>
+		<mat-expansion-panel-header>
+			<mat-panel-title>Rose-Hulman Institute of Technology</mat-panel-title>
+			<span class="headerSpacer"></span>
+			<mat-panel-description>Currently Enrolled: Graduating Spring 2024</mat-panel-description>
+		</mat-expansion-panel-header>
+		<!--Panel Content-->
+		<ul>
+			<li><strong class="h5">Field of Study: </strong>Software Engineering (Bachelor of Science), Engineering
+				Management (Masters)
+				<ul>
+					<li>Originally Studied Computer Engineering until Spring 2021</li>
+				</ul>
+			</li>
+		</ul>
+		<br>
+		<h5>Relevant Coursework:</h5>
+		<ul>
+			<li>Computer Architecture I (CSSE232)</li>
+			<li>Intro to Embedded Systems (ECE230)</li>
+			<li>Data Structures and Algorithms (CSSE230)</li>
+			<li>Intro to Web Programming (CSSE280)</li>
+			<li>Intro to Object-Oriented Programming</li>
+		</ul>
+	</mat-expansion-panel>
+
+	<!--Panel 2-->
+	<mat-expansion-panel>
+		<mat-expansion-panel-header>
+			<mat-panel-title>Walt Whitman High School</mat-panel-title>
+			<span class="headerSpacer"></span>
+			<mat-panel-description>Graduated - Class of 2019</mat-panel-description>
+		</mat-expansion-panel-header>
+		<!--Panel Content-->
+		<p>Unweighted GPA: 3.3, Weighted GPA: 4.0</p>
+		<h5>Relevant Coursework: </h5>
+		<ul>
+			<li>AP Computer Science - Score: 4</li>
+			<li>AP Calculus AB - Score: 5</li>
+			<li>PLTW Digital Electronics</li>
+			<li>PLTW Engineering Design and Development Capstone Course</li>
+		</ul>
+	</mat-expansion-panel>
+</mat-accordion>
+
+
+<h2>Professional Experience</h2>
+<mat-accordion>
+	<!--Panel 1-->
+	<mat-expansion-panel>
+		<mat-expansion-panel-header>
+			<mat-panel-title>Rizkly Inc.</mat-panel-title>
+			<span class="headerSpacer"></span>
+			<mat-panel-description>Currently Employed: Software Development Intern</mat-panel-description>
+		</mat-expansion-panel-header>
+		<!--Panel Content-->
+		<div>Company Location: Bethesda, MD</div>
+		<div>Position: Software Development Intern</div>
+		<div>Employment Length: June 2020 - Current</div>
+		<br>
+		<ul>
+			<li>Helped plan and suggest new algorithms to deploy for client use</li>
+			<li>Wrote and optimized new algorithm code for database backends to implement
+				new features</li>
+			<li>Communicated with database/server administrators about integration of new
+				feature-sets</li>
+			<li>Documented work for company transparency to clients</li>
+			<li>Implemented a CRUD-like web service that communicates with a PostgreSQL
+				database</li>
+			<li>Created Algorithm Visualizations powered by Angular</li>
+		</ul>
+	</mat-expansion-panel>
+
+	<!--Panel 2-->
+	<mat-expansion-panel>
+		<mat-expansion-panel-header>
+			<mat-panel-title>Holton Arms Creative Summer</mat-panel-title>
+			<span class="headerSpacer"></span>
+			<mat-panel-description>Previously Employed: Web Design Counselor</mat-panel-description>
+		</mat-expansion-panel-header>
+		<!--Panel Content-->
+		<ul>
+			<div>Company Location: Bethesda, MD</div>
+			<div>Position: Web Design Counselor</div>
+			<div>Employment Length: June 2019 - August 2019</div>
+			<br>
+			<li>Taught children ages 8-15 various principles of basic web design including
+				HTML5 and CSS3</li>
+			<li>Supervised and engaged children throughout camp day</li>
+			<li>Communicated with parents about child's experiences at camp</li>
+			<li>Aided with camp-related activities and duties</li>
+		</ul>
+	</mat-expansion-panel>
+</mat-accordion>
 
 
 <footer>
