Getting Closer to Primetime
-Finally got proper router state checking for the toolbar
-Fixed the about page (*about* time I did it hahahaha sorry)
-Fun fact: the profile picture was not actually a square. It is now
-Changed the favicon (praise cubic downscaling)
-Invoked the formatter a bunch
-Removed some unused imports

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,9 +1,19 @@
-#workspaceimg {
-	width: 100vh;
+.about {
+	display: flex;
+	margin: 20px;
 }
 
-@media (max-width: 1024px) {
-	#workspaceimg {
-		width: 50vh;
-	}
+.about div {
+	margin: 20px;
+}
+
+h1 {
+	font-size: 3rem;
+	margin: 20px 20px 30px 20px;
+	padding-top: 30px;
+	padding-left: 20px;
+}
+
+p {
+	text-indent: 45px;
 }
