--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -4,26 +4,33 @@
 			<mat-grid-tile>
 				<div class="count-box">
 					<mat-icon class="headerIcon" fontIcon="nf-fa-book"></mat-icon>
-					<span class="counter">8+ years</span>
-					<p class="counter-desc"><strong>Experience</strong> in Computers, Programming, and Technology</p>
+					<div class="count-box-right">
+						<span class="counter">8+ years</span>
+						<p class="counter-desc"><strong>Experience</strong> in Computers, Programming, and Technology
+						</p>
+					</div>
 				</div>
 			</mat-grid-tile>
 
 			<mat-grid-tile>
 				<div class="count-box">
-					<mat-icon class="headerIcon" fontIcon="nf-dev-github"></mat-icon>
-					<span class="counter">10+ Repos</span>
-					<p class="counter-desc"><strong>Available on <a
-								href="https://github.com/rhit-westeraj">Github</a></strong>
-					</p>
+					<mat-icon class="headerIcon" fontIcon="nf-fa-github"></mat-icon>
+					<div class="count-box-right">
+						<span class="counter">10+ Repos</span>
+						<p class="counter-desc"><strong>Available on <a
+									href="https://github.com/rhit-westeraj">Github</a></strong>
+						</p>
+					</div>
 				</div>
 			</mat-grid-tile>
 
 			<mat-grid-tile>
 				<div class="count-box">
 					<mat-icon class="headerIcon" fontIcon="nf-fa-heart"></mat-icon>
-					<span class="counter">~1000+ hours</span>
-					<p class="counter-desc"></p>
+					<div class="count-box-right">
+						<span class="counter">1000+ hrs</span>
+						<p class="counter-desc">Effort, Dedication, and Learning</p>
+					</div>
 				</div>
 			</mat-grid-tile>
 		</mat-grid-list>
