--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -53,10 +53,8 @@ mat-sidenav {
 	font-size: 24px;
 	margin: 0;
 	padding: 0;
-	font-weight: 600;
-	-moz-text-align-last: center;
+	font-weight: 500;
 	text-align-last: center;
-	font-family: "Poppins", sans-serif;
 }
 
 .profile h1 a,
@@ -86,7 +84,7 @@ mat-sidenav {
 }
 
 .profile .social-links a:hover {
-	background: #149ddd;
+	background: #43a047;
 	color: #fff;
 	text-decoration: none;
 }
@@ -97,4 +95,13 @@ mat-sidenav {
 	display: block;
 	width: 120px;
 	border: 8px solid #2c2f3f;
+	transition:0.3s;
+}
+
+.profile img.pfp:hover{
+	border-color: #43a047;
+}
+
+mat-icon {
+	font-size: 1.25rem;
 }
