--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,8 +11,8 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$portfolio-primary: mat.define-palette(mat.$green-palette, 500);
-$portfolio-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$portfolio-primary: mat.define-palette(mat.$green-palette, 600);
+$portfolio-accent: mat.define-palette(mat.$green-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
 $portfolio-warn: mat.define-palette(mat.$red-palette);
@@ -116,4 +116,13 @@ footer {
 
 .card .devStatus.archived {
 	color: red;
+}
+
+.mat-raised-button{
+	transition: 0.3s;
+}
+
+.mat-raised-button:hover{
+	background-color: #fff;
+	color: #000;
 }
