GPG Key Is Now Accessible :)
-Added GPG Key button to main sidebar
-The GPG Key button will copy to clipboard and display a snackbar on copy
-Added tooltips to social links buttons
-Added 404 Page Title
-Added GPG Key .asc asset (currently unused)
-Added Clipboard, Snack Bar, and Tooltip Modules
-Added Additional Asset Deploy Rules
-Created JSON for GPG Key Distribution

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,14 +10,17 @@
 					<a routerLink="/main" routerLinkActive="active">Alex Westerman</a>
 				</h1>
 				<div class="social-links">
-					<a href="https://twitter.com/_FaceFTW">
+					<a href="https://twitter.com/_FaceFTW" matTooltip="Twitter">
 						<mat-icon fontIcon="nf-mdi-twitter"></mat-icon>
 					</a>
-					<a href="https://github.com/rhit-westeraj">
+					<a href="https://github.com/rhit-westeraj" matTooltip="Github">
 						<mat-icon fontIcon="nf-fa-github"></mat-icon>
 					</a>
-					<a href="mailto:awesterman16@live.com">
+					<a href="mailto:awesterman16@live.com" matTooltip="Email">
 						<mat-icon fontIcon="nf-mdi-email"></mat-icon>
+					</a>
+					<a [cdkCopyToClipboard]="gpgPubKey" (click)="showCopiedSnackBar()" matTooltip="GPG Public Key">
+						<mat-icon fontIcon="nf-mdi-key_variant"></mat-icon>
 					</a>
 				</div>
 			</div>
